--- a/app/build.gradle
+++ b/app/build.gradle
@@ -141,7 +141,7 @@ dependencies {
     // Photoview
     implementation 'com.github.chrisbanes:PhotoView:2.1.3'
 
-    // Markdown view.
+    // Markdown renderer.
     implementation "io.noties.markwon:core:4.6.2"
 
     // Promises
